--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "aframe": "^0.4.0",
     "browserify": "^13.0.0",
-    "budo": "^8.2.2",
+    "budo": "^9.4.7",
     "chai": "^3.4.1",
     "chai-shallow-deep-equal": "^1.3.0",
     "ghpages": "^0.0.8",
@@ -52,13 +52,14 @@
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.3",
     "karma-sinon-chai": "^1.1.0",
+    "leaflet": "^1.0.3",
     "mocha": "^2.3.4",
     "randomcolor": "^0.4.4",
     "semistandard": "^8.0.0",
     "shelljs": "^0.7.0",
+    "shx": "^0.1.1",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
-    "shx": "^0.1.1",
     "snazzy": "^4.0.0",
     "webpack": "^1.13.0"
   },
