--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "cdn": "dist/aframe-tangram-component.min.js",
   "scripts": {
-    "build": "browserify examples/main.js -o examples/build.js",
-    "dev": "budo examples/main.js:build.js --dir examples --port 8000 --live",
+    "build": "browserify examples/main.js -t yamlify -o examples/build.js",
+    "dev": "budo examples/main.js:build.js --dir examples --port 8000 --live -- -t yamlify",
     "dist": "webpack index.js dist/aframe-tangram-component.js && webpack -p index.js dist/aframe-tangram-component.min.js",
     "lint": "semistandard -v | snazzy",
     "prepublish": "npm run dist",
@@ -42,6 +42,7 @@
     "budo": "^9.4.7",
     "chai": "^3.4.1",
     "chai-shallow-deep-equal": "^1.3.0",
+    "cuid": "^1.3.8",
     "ghpages": "^0.0.8",
     "karma": "^0.13.15",
     "karma-browserify": "^4.4.2",
@@ -61,7 +62,8 @@
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "snazzy": "^4.0.0",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "yamlify": "^0.1.3"
   },
   "semistandard": {
     "ignore": [
