--- a/src/simple-style.yaml
+++ b/src/simple-style.yaml
@@ -13,6 +13,8 @@ sources:
     osm:
         type: TopoJSON
         url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
+        url_params:
+            api_key: global.sdk_mapzen_api_key
         max_zoom: 16
 
 layers:
