--- a/package.json
+++ b/package.json
@@ -1,74 +1,75 @@
 {
-  "name": "aframe-tangram-component",
-  "version": "1.0.0",
-  "description": "A Tangram component for A-Frame.",
-  "main": "index.js",
-  "cdn": "dist/aframe-tangram-component.min.js",
-  "scripts": {
-    "build": "browserify examples/main.js -t yamlify -o examples/build.js",
-    "dev": "budo examples/main.js:build.js --dir examples --port 8000 --live -- -t yamlify",
-    "dist": "webpack index.js dist/aframe-tangram-component.js && webpack -p index.js dist/aframe-tangram-component.min.js",
-    "lint": "semistandard -v | snazzy",
-    "prepublish": "npm run dist",
-    "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r examples/* gh-pages",
-    "ghpages": "npm run preghpages && ghpages -p gh-pages",
-    "start": "npm run dev",
-    "test": "karma start ./tests/karma.conf.js",
-    "test:firefox": "karma start ./tests/karma.conf.js --browsers Firefox",
-    "test:chrome": "karma start ./tests/karma.conf.js --browsers Chrome"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mattrei/aframe-tangram-component.git"
-  },
-  "keywords": [
-    "aframe",
-    "aframe-component",
-    "aframe-vr",
-    "vr",
-    "mozvr",
-    "webvr",
-    "tangram"
-  ],
-  "author": "Matthias Treitler <matthias.treitler@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mattrei/aframe-tangram-component/issues"
-  },
-  "homepage": "https://github.com/mattrei/aframe-tangram-component#readme",
-  "devDependencies": {
-    "aframe": "^0.6.0",
-    "browserify": "^13.0.0",
-    "budo": "^9.4.7",
-    "chai": "^3.4.1",
-    "chai-shallow-deep-equal": "^1.3.0",
-    "cuid": "^1.3.8",
-    "ghpages": "^0.0.8",
-    "karma": "^0.13.15",
-    "karma-browserify": "^4.4.2",
-    "karma-chai-shallow-deep-equal": "0.0.4",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.3",
-    "karma-sinon-chai": "^1.1.0",
-    "leaflet": "^1.0.3",
-    "mocha": "^2.3.4",
-    "randomcolor": "^0.4.4",
-    "semistandard": "^8.0.0",
-    "shelljs": "^0.7.0",
-    "shx": "^0.1.1",
-    "sinon": "^1.17.5",
-    "sinon-chai": "^2.8.0",
-    "snazzy": "^4.0.0",
-    "webpack": "^1.13.0",
-    "yamlify": "^0.1.3"
-  },
-  "semistandard": {
-    "ignore": [
-      "examples/build.js",
-      "dist/**"
-    ]
-  }
+    "name": "aframe-tangram-component",
+    "version": "1.0.0",
+    "description": "A Tangram component for A-Frame.",
+    "main": "index.js",
+    "cdn": "dist/aframe-tangram-component.min.js",
+    "scripts": {
+        "build": "browserify examples/main.js -t yamlify -o examples/build.js",
+        "dev": "budo examples/main.js:build.js --dir examples --port 8000 --live -- -t yamlify",
+        "dist": "webpack index.js dist/aframe-tangram-component.js && webpack -p index.js dist/aframe-tangram-component.min.js",
+        "lint": "semistandard -v | snazzy",
+        "prepublish": "npm run dist",
+        "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r examples/* gh-pages",
+        "ghpages": "npm run preghpages && ghpages -p gh-pages",
+        "start": "npm run dev",
+        "test": "karma start ./tests/karma.conf.js",
+        "test:firefox": "karma start ./tests/karma.conf.js --browsers Firefox",
+        "test:chrome": "karma start ./tests/karma.conf.js --browsers Chrome"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mattrei/aframe-tangram-component.git"
+    },
+    "keywords": [
+        "aframe",
+        "aframe-component",
+        "aframe-vr",
+        "vr",
+        "mozvr",
+        "webvr",
+        "tangram"
+    ],
+    "author": "Matthias Treitler <matthias.treitler@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/mattrei/aframe-tangram-component/issues"
+    },
+    "homepage": "https://github.com/mattrei/aframe-tangram-component#readme",
+    "devDependencies": {
+        "aframe": "^0.6.0",
+        "browserify": "^13.0.0",
+        "budo": "^9.4.7",
+        "chai": "^3.4.1",
+        "chai-shallow-deep-equal": "^1.3.0",
+        "ghpages": "^0.0.8",
+        "karma": "^0.13.15",
+        "karma-browserify": "^4.4.2",
+        "karma-chai-shallow-deep-equal": "0.0.4",
+        "karma-chrome-launcher": "2.0.0",
+        "karma-env-preprocessor": "^0.1.1",
+        "karma-firefox-launcher": "^0.1.7",
+        "karma-mocha": "^0.2.1",
+        "karma-mocha-reporter": "^1.1.3",
+        "karma-sinon-chai": "^1.1.0",
+        "leaflet": "^1.0.3",
+        "mocha": "^2.3.4",
+        "semistandard": "^8.0.0",
+        "shelljs": "^0.7.0",
+        "shx": "^0.1.1",
+        "sinon": "^1.17.5",
+        "sinon-chai": "^2.8.0",
+        "snazzy": "^4.0.0",
+        "webpack": "^1.13.0",
+        "yamlify": "^0.1.3"
+    },
+    "dependencies": {
+        "cuid": "^1.3.8"
+    },
+    "semistandard": {
+        "ignore": [
+            "examples/build.js",
+            "dist/**"
+        ]
+    }
 }
