--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
         "karma-mocha": "^0.2.1",
         "karma-mocha-reporter": "^1.1.3",
         "karma-sinon-chai": "^1.1.0",
-        "leaflet": "^1.0.3",
         "mocha": "^2.3.4",
         "semistandard": "^8.0.0",
         "shelljs": "^0.7.0",
@@ -64,7 +63,8 @@
         "yamlify": "^0.1.3"
     },
     "dependencies": {
-        "cuid": "^1.3.8"
+        "cuid": "^1.3.8",
+        "leaflet": "^1.0.3"
     },
     "semistandard": {
         "ignore": [
