--- a/package.json
+++ b/package.json
@@ -59,12 +59,12 @@
         "sinon": "^1.17.5",
         "sinon-chai": "^2.8.0",
         "snazzy": "^4.0.0",
-        "webpack": "^1.13.0",
-        "yamlify": "^0.1.3"
+        "webpack": "^1.13.0"
     },
     "dependencies": {
         "cuid": "^1.3.8",
-        "leaflet": "^1.0.3"
+        "leaflet": "^1.0.3",
+        "yamlify": "^0.1.3"
     },
     "semistandard": {
         "ignore": [
