--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     },
     "dependencies": {
         "cuid": "^1.3.8",
-        "leaflet": "^1.0.3",
+        "leaflet": "^1.0.3"
     },
     "semistandard": {
         "ignore": [
