--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "browserify examples/main.js -t yamlify -o examples/build.js",
         "dev": "budo examples/main.js:build.js --dir examples --port 8000 --live -- -t yamlify",
         "dist": "webpack index.js dist/aframe-tangram-component.js && webpack -p index.js dist/aframe-tangram-component.min.js",
-        "lint": "semistandard -v | snazzy",
+        "lint": "semistandard -v --fix | snazzy",
         "prepublish": "npm run dist",
         "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r examples/* gh-pages",
         "ghpages": "npm run preghpages && ghpages -p gh-pages",
