--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/mattrei/aframe-tangram-component.git"
+        "url": "https://github.com/mattrei/aframe-tangram-component"
     },
     "keywords": [
         "aframe",
@@ -57,14 +57,14 @@
         "shelljs": "^0.7.0",
         "shx": "^0.1.1",
         "sinon": "^1.17.5",
-        "sinon-chai": "^2.8.0",
+        "sinon-chai": "^2.13.0",
         "snazzy": "^4.0.0",
         "webpack": "^1.13.0",
         "yamlify": "^0.1.3"
     },
     "dependencies": {
         "cuid": "^1.3.8",
-        "leaflet": "^1.0.3"
+        "leaflet": "^1.2.0"
     },
     "semistandard": {
         "ignore": [
