--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     },
     "dependencies": {
         "cuid": "^1.3.8",
-        "leaflet": "^1.2.0"
+        "leaflet": "^1.2.0",
+        "tangram": "^0.13.1"
     },
     "semistandard": {
         "ignore": [
