--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aframe-tangram-terrain-component",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "description": "A Tangram terrain component for A-Frame.",
     "main": "index.js",
     "cdn": "dist/aframe-tangram-terrain-component.min.js",
@@ -60,6 +60,7 @@
         "sinon": "^1.17.5",
         "sinon-chai": "^2.14.0",
         "snazzy": "^4.0.0",
+        "three.fbo-helper": "^1.1.0",
         "webpack": "^3.0.0",
         "yamlify": "^0.1.3",
         "yml-loader": "^2.1.0"
