--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     },
     "homepage": "https://github.com/mattrei/aframe-tangram-terrain-component#readme",
     "devDependencies": {
-        "aframe": "*",
+        "aframe": "^0.8.1",
         "browserify": "^13.0.0",
         "budo": "^9.4.7",
         "chai": "^3.4.1",
@@ -60,7 +60,6 @@
         "sinon": "^1.17.5",
         "sinon-chai": "^2.14.0",
         "snazzy": "^4.0.0",
-        "three.fbo-helper": "^1.1.0",
         "webpack": "^3.11.0",
         "yamlify": "^0.1.3",
         "yml-loader": "^2.1.0"
