--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aframe-tangram-terrain-component",
-    "version": "2.1.0",
+    "version": "3.0.0",
     "description": "A Tangram terrain component for A-Frame.",
     "main": "index.js",
     "cdn": "dist/aframe-tangram-terrain-component.min.js",
@@ -38,7 +38,7 @@
     },
     "homepage": "https://github.com/mattrei/aframe-tangram-terrain-component#readme",
     "devDependencies": {
-        "aframe": "^0.8.2",
+        "aframe": "*",
         "browserify": "^13.0.0",
         "budo": "^9.4.7",
         "chai": "^3.4.1",
