--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "main": "index.js",
     "cdn": "dist/aframe-tangram-terrain-component.min.js",
     "scripts": {
-        "build": "browserify examples/main.js -t yamlify -o examples/build.js",
-        "dev": "budo examples/main.js:build.js --dir examples --port 8000 --live -- -t yamlify",
-        "dist": "webpack index.js dist/aframe-tangram-terrain-component.js && webpack -p index.js dist/aframe-tangram-terrain-component.min.js",
+        "build2": "browserify examples/main.js -t yamlify -o examples/build.js",
+        "dev2": "budo examples/main.js:build.js --dir examples --port 8000 --live -- -t yamlify",
+        "dist2": "webpack index.js dist/aframe-tangram-terrain-component.js && webpack -p index.js dist/aframe-tangram-terrain-component.min.js",
+        "dev": "budo index.js:dist/aframe-tangram-terrain-component.min.js --port 7000 --live -- -t yamlify",
+        "dist": "npm run rollup && uglifyjs dist/aframe-tangram-terrain-component.js > dist/aframe-tangram-terrain-component.min.js",
         "lint": "semistandard -v --fix | snazzy",
         "prepublish": "npm run dist",
         "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r examples/* gh-pages",
         "ghpages": "npm run preghpages && ghpages -p gh-pages",
+        "rollup": "rollup index.js --output.format umd --name 'aframe-tangram-terrain-component' --output.file dist/aframe-tangram-terrain-component.js",
         "start": "npm run dev",
         "test": "karma start ./tests/karma.conf.js",
         "test:firefox": "karma start ./tests/karma.conf.js --browsers Firefox",
@@ -60,14 +63,14 @@
         "sinon": "^1.17.5",
         "sinon-chai": "^2.14.0",
         "snazzy": "^4.0.0",
-        "webpack": "^3.11.0",
+        "webpack": "^3.12.0",
         "yamlify": "^0.1.3",
         "yml-loader": "^2.1.0"
     },
     "dependencies": {
         "cuid": "^1.3.8",
-        "leaflet": "^1.3.1",
-        "tangram": "^0.15.1"
+        "leaflet": "^1.3.4",
+        "tangram": "^0.15.3"
     },
     "semistandard": {
         "ignore": [
