less tress for gc

--- a/src/styles/normal-alpha-elevation.yaml
+++ b/src/styles/normal-alpha-elevation.yaml
@@ -18,8 +18,6 @@ styles:
                 u_scale: 2
                 u_decoder: decoder
                 # set desired visible elevation range
-                u_max: 8900. # everest = 8848
-                u_min: 0. # sea level
                 # u_min: -11000. # challenger deep = -10916
             defines:
                 USE_NORMALS: true
@@ -35,11 +33,13 @@ styles:
                     float height = 1.0 - color.a;
                     // set alpha to 1 so map isn't transparent
                     color.a = 1.;
+
                     // check height against decoder ring image to un-quantize it
                     vec3 ring = texture2D(u_decoder, vec2(height,0.5)).rgb;
                     ring.r *= 256.;
                     ring.g *= 256. * 256.;
                     height = (ring.r + ring.g);
+                    
                     // range is now 0 - 19900, squish into 0 - 1
                     height /= 19900.;
                     //height = (height - u_min)/(u_max - u_min);
@@ -47,12 +47,12 @@ styles:
                     
                     #ifdef USE_NORMALS
                         // height from normal alpha
-                        color.a = height * u_scale - (u_scale - 1.);
+                        color.a = height; // * u_scale - (u_scale - 1.);
                     #else
-                        color.a = height * u_scale - (u_scale - 1.);
+                        color.a = height; // * u_scale - (u_scale - 1.);
                         color.rgb = vec3(height);
                         // exaggerate
-                        color.rgb = color.rgb * u_scale - (u_scale - 1.);
+                        //color.rgb = color.rgb * u_scale - (u_scale - 1.);
                     #endif
       
 layers:
