removed not need pxtoworldratio in static-terrain

--- a/examples/lod/assets/austria-airborne.yaml
+++ b/examples/lod/assets/austria-airborne.yaml
@@ -1,7 +1,7 @@
 sources:
     austria:
         type: Raster
-        url: https://maps1.wien.gv.at/basemap/bmaporthofoto30cm/normal/google3857/{z}/{y}/{x}.jpeg
+        url: https://maps.wien.gv.at/basemap/bmaporthofoto30cm/normal/google3857/{z}/{y}/{x}.jpeg
         max_zoom: 18
 
 layers:
