--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aframe-tangram-terrain-component",
-    "version": "3.0.4",
+    "version": "3.0.6",
     "description": "A Tangram terrain component for A-Frame.",
     "main": "index.js",
     "cdn": "dist/aframe-tangram-terrain-component.min.js",
@@ -37,7 +37,7 @@
     },
     "homepage": "https://github.com/mattrei/aframe-tangram-terrain-component#readme",
     "devDependencies": {
-        "aframe": "*",
+        "aframe": "^0.9.1",
         "browserify": "^13.0.0",
         "budo": "^8.2.2",
         "chai": "^3.4.1",
@@ -67,7 +67,7 @@
     "dependencies": {
         "cuid": "^1.3.8",
         "leaflet": "^1.4.0",
-        "tangram": "^0.17.1"
+        "tangram": "^0.18.1"
     },
     "semistandard": {
         "ignore": [
