--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "aframe-tangram-terrain-component",
-    "version": "3.0.7",
+    "version": "3.1.0",
     "description": "A Tangram terrain component for A-Frame.",
     "main": "index.js",
     "cdn": "dist/aframe-tangram-terrain-component.min.js",
     "scripts": {
         "build": "webpack index.js dist/aframe-tangram-terrain-component.js",
-        "dev": "budo index.js:dist/aframe-tangram-terrain-component.min.js --port 7000 --live -- -t yamlify",
+        "dev": "budo index.js:dist/aframe-tangram-terrain-component.min.js --port 7000 --live -- -t yamlify  -g browserify-css",
         "dist": "npm run build && uglifyjs dist/aframe-tangram-terrain-component.js > dist/aframe-tangram-terrain-component.min.js",
         "lint": "semistandard -v --fix | snazzy",
         "prepublish": "npm run dist",
@@ -39,9 +39,11 @@
     "devDependencies": {
         "aframe": "^0.9.2",
         "browserify": "^13.0.0",
+        "browserify-css": "^0.15.0",
         "budo": "^8.2.2",
         "chai": "^3.4.1",
         "chai-shallow-deep-equal": "^1.3.0",
+        "css-loader": "^2.1.1",
         "ghpages": "^0.0.8",
         "karma": "^0.13.15",
         "karma-browserify": "^4.4.2",
@@ -53,13 +55,16 @@
         "karma-mocha-reporter": "^1.1.3",
         "karma-sinon-chai": "^1.3.4",
         "mocha": "^2.3.4",
+        "npm": "^6.9.0",
         "semistandard": "^8.0.0",
         "shelljs": "^0.7.0",
         "shx": "^0.1.1",
         "sinon": "^1.17.5",
         "sinon-chai": "^2.14.0",
         "snazzy": "^4.0.0",
+        "style-loader": "^0.23.1",
         "uglify-es": "github:mishoo/UglifyJS2#harmony",
+        "url-loader": "^1.1.2",
         "webpack": "^2.7.0",
         "yamlify": "^0.1.3",
         "yml-loader": "^2.1.0"
