--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     },
     "homepage": "https://github.com/mattrei/aframe-tangram-terrain-component#readme",
     "devDependencies": {
-        "aframe": "^0.9.2",
+        "aframe": "*",
         "browserify": "^13.0.0",
         "browserify-css": "^0.15.0",
         "budo": "^8.2.2",
